Simpleton library import.
Signed-off-by: Alx <aa_dav@mail.ru>

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -55,7 +55,7 @@
    </widget>
    <addaction name="menuFile"/>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QStatusBar" name="statusBar"/>
   <action name="actionQuit">
    <property name="text">
     <string>Quit</string>
