--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -22,16 +22,16 @@
      <number>0</number>
     </property>
     <property name="leftMargin">
-     <number>4</number>
+     <number>0</number>
     </property>
     <property name="topMargin">
-     <number>4</number>
+     <number>0</number>
     </property>
     <property name="rightMargin">
-     <number>4</number>
+     <number>0</number>
     </property>
     <property name="bottomMargin">
-     <number>4</number>
+     <number>0</number>
     </property>
     <item>
      <widget class="SimpGLWidget" name="glWidget" native="true"/>
@@ -54,7 +54,16 @@
     <addaction name="actionOpen"/>
     <addaction name="actionQuit"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>View</string>
+    </property>
+    <addaction name="actionView200"/>
+    <addaction name="actionView300"/>
+    <addaction name="actionView400"/>
+   </widget>
    <addaction name="menuFile"/>
+   <addaction name="menuView"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionQuit">
@@ -65,6 +74,21 @@
   <action name="actionOpen">
    <property name="text">
     <string>Open...</string>
+   </property>
+  </action>
+  <action name="actionView200">
+   <property name="text">
+    <string>Set 200%</string>
+   </property>
+  </action>
+  <action name="actionView300">
+   <property name="text">
+    <string>Set 300%</string>
+   </property>
+  </action>
+  <action name="actionView400">
+   <property name="text">
+    <string>Set 400%</string>
    </property>
   </action>
  </widget>
