--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -240,6 +240,27 @@
         </item>
        </layout>
       </widget>
+      <widget class="QWidget" name="debuggerTab">
+       <attribute name="title">
+        <string>Debugger</string>
+       </attribute>
+       <layout class="QHBoxLayout" name="horizontalLayout_7">
+        <item>
+         <widget class="QWidget" name="widget_5" native="true">
+          <layout class="QVBoxLayout" name="verticalLayout_3">
+           <item>
+            <widget class="QCodeEditor" name="debuggerEditor" native="true"/>
+           </item>
+          </layout>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="aboutTab">
+       <attribute name="title">
+        <string>About</string>
+       </attribute>
+      </widget>
      </widget>
     </item>
    </layout>
@@ -274,11 +295,19 @@
      <string>Emulator</string>
     </property>
     <addaction name="actionRun"/>
+    <addaction name="actionResume"/>
     <addaction name="actionStop"/>
+   </widget>
+   <widget class="QMenu" name="menuTools">
+    <property name="title">
+     <string>Tools...</string>
+    </property>
+    <addaction name="actionImageToAsm"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuView"/>
    <addaction name="menuEmulator"/>
+   <addaction name="menuTools"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionQuit">
@@ -308,7 +337,7 @@
   </action>
   <action name="actionRun">
    <property name="text">
-    <string>Run</string>
+    <string>Compile and run</string>
    </property>
   </action>
   <action name="actionStop">
@@ -319,6 +348,16 @@
   <action name="actionSave">
    <property name="text">
     <string>Save...</string>
+   </property>
+  </action>
+  <action name="actionImageToAsm">
+   <property name="text">
+    <string>Image to bitmap.asm...</string>
+   </property>
+  </action>
+  <action name="actionResume">
+   <property name="text">
+    <string>Resume</string>
    </property>
   </action>
  </widget>
