Input io beginning...
Signed-off-by: Alx <aa_dav@mail.ru>

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -50,7 +50,11 @@
        </attribute>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
         <item>
-         <widget class="PPUWidget" name="glWidget" native="true"/>
+         <widget class="PPUWidget" name="glWidget" native="true">
+          <property name="focusPolicy">
+           <enum>Qt::StrongFocus</enum>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
